partially fixed problem with too long comments

--- a/src/sass/components/_comment-section.scss
+++ b/src/sass/components/_comment-section.scss
@@ -8,6 +8,7 @@
 
     &--extended &__comments {
         overflow-y: scroll;
+        padding: 1rem;
         &::-webkit-scrollbar {
             display: none;
         }
