--- a/src/sass/components/_comment.scss
+++ b/src/sass/components/_comment.scss
@@ -11,6 +11,7 @@
     &__comment{
         margin-right: auto;
         font-size: 1.2rem;
+        word-break: break-word;
     }
     &__like{
         width: 2rem;
